--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "animapp-server",
   "version": "1.0.0",
+  "engines":{
+    "node": "7.3.0"
+  },
   "description": "",
   "main": "app.js",
   "scripts": {
