--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "animapp-server",
   "version": "1.0.0",
-  "engines":{
+  "engines": {
     "node": "7.3.0"
   },
   "description": "",
@@ -23,8 +23,13 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.3.0",
     "mocha": "^3.2.0",
     "mongoose": "^4.9.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
