--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   },
   "homepage": "https://github.com/mblodorn/animapp-api#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
+    "jwt-simple": "^0.5.1",
     "mocha": "^3.2.0",
     "mongoose": "^4.9.2",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0"
   }
